--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "m12/neos-utils",
+    "name": "m12/neos-utils-test",
     "type": "typo3-flow-plugin",
     "description": "Neos utils library",
     "license": ["MIT"],
