--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "require": {
-        "typo3/neos-nodetypes": "*"
+        "neos/neos-nodetypes": "*"
     },
     "autoload": {
         "psr-0": {
